--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit==1.36.0
-pandas==2.2.2
-numpy==2.1.0
-scikit-learn==1.5.2
-pillow==10.4.0
+streamlit==1.39.0
+pandas
+numpy==1.26.4
+scikit-learn
